deploy/k8s/dicom-enterprise-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dicom-default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dicom-web-allow-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dicom-web-runtime
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dicom-workflow-allow-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dicom-workflow-runtime
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8082
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dicom-dimse-allow-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dicom-dimse-runtime
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 11112
        - protocol: TCP
          port: 18112
